2013-05-20  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Fixes concerning filtered items.
	(todos-mode-line-control): Make doc string more precise.
	(todos-read-file-name): Default to current file when user hits RET
	without choosing a file, to avoid creating file with empty base name.
	(todos-filter-items): Rename buffer of filtered items files.
	(todos-find-item): Save match data to avoid arg out of range error.
	(todos-print-buffer): Fix header of filtered items buffer output.

2013-05-17  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el (todos-done-separator): Use window-width for length, in
	anticipation of bug#2749 being fixed.

2013-05-17  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el (todos-category-completions): Restore point after
	ensuring category is properly displayed.

2013-05-16  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el (todos-filtered-items-mode-map): Update some bindings.
	(todos-show): Make it work the same in todos-archive-mode and
	todos-filtered-items-mode as in todos-mode.
	(todos-quit): When called in todos-archive-mode, switch to
	corresponding category in todo file.  When called in todos-mode,
	avoid going right back to archive.

2013-05-16  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Improve toggling of item numbering and headers.
	(todos-prefix-overlays): Don't reset item numbering for
	done items unless in todos-mode.
	(todos-archive-mode-map): Add bindings for todos-toggle-item-header.
	(todos-toggle-prefix-numbers): Reimplement without using
	todos-reset-prefix and make it work in Todos Archive mode and
	Todos Filtered Items mode.
	(todos-toggle-item-header): Make it work in Todos Archive mode and
	Todos Filtered Items mode.

2013-05-15  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Use tab instead of spaces to indent.
	(todos-indent-to-here): Change default value.
	(todos-modes-set-1): Make tab-width a local variable and set it to
	todos-indent-to-here.